--- a/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
+++ b/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
@@ -28,5 +28,35 @@ Nav.WorfklowFileUpload=Datei hochladen
 Nav.Admin.Processes=Liste der Workflowprozesse
 Nav.Admin.EditWebcontent=Statische Webseiteninhalte bearbeiten
 
+Editor.Search.Label.ProfNames=Name
+Editor.Search.Label.Historigin=Fakultät/Sektion
+Editor.Search.Label.SubjectProf=Fachklassifikation
+Editor.Search.Label.ProfTypes=Art der Professur
+Editor.Search.Label.ProfStates=Status des Eintrages
+Editor.Search.Label.Professortime=Professor in Rostock
+Editor.Search.Label.Lifetime=gelebt
+Editor.Search.Label.Facultytime=Fakultätsangehörigkeit
+Editor.Search.Label.Time.between=zwischen/seit
+Editor.Search.Label.Time.betweenAnd=und
+Editor.Search.Label.Time.after=nach
+Editor.Search.Label.Time.before=vor
+Editor.Search.Label.Life.born=geboren
+Editor.Search.Label.Life.died=gestorben
+Editor.Search.Label.Professor.after=Berufung
+Editor.Search.Label.Professor.before=Ausscheiden
+Editor.Search.label.Timespan=Zeitraum:
+
+
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
+
+Webpage.indexbrowser.professorum.title=Personen von A - Z
+Webpage.indexbrowser.professorum.intro=Dieser Index enthält die Namen der Personen die im Professorenkatalog aufgeführt sind
+
+Webpage.editor.title.simple=Einfache Suche über die Daten im Professorenkatalog
+Webpage.editor.title.extended=Erweiterte Suche über die Daten im Professorenkatalog
+Webpage.editor.title.editor.searchmasks.SearchMask_ProfessorumEdit.xml=Suchmaske für Editoren des Professorenkatalogs
+Webpage.browse.title.histfac=Über Fakultäten/Sektionen browsen
+Webpage.browse.title.subject=Über Fachgebiete browsen
+
+Webpage.Search.Possibilities=Es stehen Ihnen folgende Möglichkeiten zur Verfügung:
