java code for workflow and messages for web site
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28550 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
+++ b/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
@@ -60,3 +60,35 @@ Webpage.browse.title.histfac=Über Fakultäten/Sektionen browsen
 Webpage.browse.title.subject=Über Fachgebiete browsen
 
 Webpage.Search.Possibilities=Es stehen Ihnen folgende Möglichkeiten zur Verfügung:
+
+WF.professorum.feedback=Fehler / Änderungsvorschläge / Kommentare
+
+WF.professorum=Arbeitsmappe CPR
+WF.professorum.ActualStateOfYourDocument=Aktueller Bearbeitungsstand bei der Veröffentlichung eines CPR Dokuments. 
+WF.professorum.Created=Das leere Dokument für den Catalogus Professorum ist angelegt. Sie können jetzt die Metadaten bearbeiten, die Dokumente hochladen. 
+WF.professorum.Description=Catalogus Professorum
+WF.professorum.Headline=Bearbeiten und Verwalten der CPR Dokumente
+WF.professorum.status.processEditInitialized=Zum Bearbeiten in den Workflow geladen
+WF.professorum.ID=ID 
+WF.professorum.MyInititiatedProcesses=Meine CPR Dokumente
+WF.professorum.Professorum=CPR
+WF.professorum.SearchToEdit=Suche CPR Dokumente zur Bearbeitung
+
+WF.professorum.StartWorkflow=Eine neue Person anlegen
+WF.professorum.begin=Person anlegen
+WF.professorum.completedocumentandsendtolibrary=Bitte füllen Sie die Metadaten des Dokumentes aus und laden gegebenenfalls Dateien hoch.
+WF.professorum.documentSubmitted2=Durch einen Mitarbeiter der Bibliothek wird diese dann anschliessend veröffentlicht und in das System gestellt.
+WF.professorum.errorUserGuest=Sie haben nicht die notwendigen Berechtigungen für diese Aktion.
+WF.professorum.info=Arbeitsmappe CPR (Information)
+WF.professorum.status.documentCommitted=Ihr CPR Dokument wurde erfolgreich veröffentlicht.
+WF.professorum.status.documentCreated=Das Dokument ist in der Arbeitsmappe angelegt. Nach der Vervollständigung der Metadaten und dem Hochladen Ihres Anhangs können Sie das Dokument absenden.
+WF.professorum.status.documentSubmitted=Die Publikation ist abgegeben worden. Nach der Prüfung durch einen Mitarbeiter der Bibliothek wird sie veröffentlicht. Sie werden per Mail über die Veröffentlichung in Kenntnis gesetzt.
+WF.professorum.status.getInitiatorsEmailAddress=Die Emailadresse des Autors/Editors muss noch erfaßt werden.
+WF.professorum.status.isInitiatorsEmailAddressAvailable=Bitte geben Sie für die weitere Korrespondenz hinsichtlich Ihrer Veröffentlichung eine E-Mail Adresse an, die Sie regelmäßig lesen.
+WF.professorum.status.processInitialized=Workflow zum Erstellen eines neuen Dokuments zum CPR gestartet
+WF.professorum.status.wasCommitmentSuccessful=Das Dokument kann veröffentlicht werden. Sie werden per E-Mail informiert, sobald dies geschehen ist.
+WF.professorum.taskCompleteDocumentAndSendToLibrary=Absenden der vollständigen Daten an die Bibliothek
+
+
+Webpage.intro.professorum.Subtitle1=Eingabe der CPR Daten
+Webpage.intro.professorum.Text1=Bitte legen Sie zunächst die Metadaten an und laden anschliessend die eventuell zugehörigen Dokumente hoch. Nach diesen Arbeitschritten müssen die daten auf dem Server veröffentlicht werden. Dies geschieht durch einen Mitarbeiter mit den entsprechenden Publikationsrechten. Bei Unvollständigkeit oder Fehlern erhalten Sie Nachricht.    
