fixed editor and i18n for editor
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28552 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
+++ b/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
@@ -46,6 +46,201 @@ Editor.Search.Label.Professor.after=Berufung
 Editor.Search.Label.Professor.before=Ausscheiden
 Editor.Search.label.Timespan=Zeitraum:
 
+#Docdetails Label
+OMD.CPR.name=Name
+OMD.CPR.nameM=Name (*)
+OMD.CPR.academictitles=akademischer Titel
+OMD.CPR.professorships=Prof. in Rostock
+OMD.CPR.faculties=Fakultät
+OMD.CPR.facultiesM=Fakultät (*)
+OMD.CPR.institutes=Institut
+OMD.CPR.fieldofstudies=Lehr- und<br />Forschungsgebiete
+OMD.CPR.subjects=Fachgebiet
+OMD.CPR.emails=E-Mail-Adresse
+OMD.CPR.homepages=Homepage
+OMD.CPR.surnames=Namensvarianten
+OMD.CPR.firstnames=weitere Vornamen
+OMD.CPR.lifetimes=Lebensdaten
+OMD.CPR.births=Daten zur Geburt
+OMD.CPR.birthsM=Daten zur Geburt (*)
+OMD.CPR.deaths=Daten zum Tode
+OMD.CPR.confessions=Konfession
+OMD.CPR.fathers=Vater
+OMD.CPR.mothers=Mutter
+OMD.CPR.families=Familie
+OMD.CPR.biographics=Kurzbiographie
+OMD.CPR.academicdegrees=akademische<br />Abschlüsse
+OMD.CPR.adminfunctions=akademische<br />Selbstverwaltung
+OMD.CPR.otherfunctions=Funktionen
+OMD.CPR.memberships=wissenschaftliche<br />Mitgliedschaften
+OMD.CPR.awards=Ehrungen
+OMD.CPR.otherinfos=weitere Informationen
+OMD.CPR.mainpublications=Werke (Auswahl)
+OMD.CPR.bibliographicrefs=Nachweis von<br />Publikationen
+OMD.CPR.complexrefs=Komplexe Verlinkung
+OMD.CPR.sources=Quellen
+OMD.CPR.references=weitere Literatur
+OMD.CPR.documents=Dokument
+OMD.CPR.derobjects=Anhang
+OMD.CPR.otherprofessorships=Weitere Professuren
+OMD.CPR.link2page=Link auf diese Seite
+OMD.CPR.onlineres=Internet-Ressourcen
+OMD.CPR.sex=Geschlecht
+OMD.CPR.sexM=Geschlecht (*)
+OMD.CPR.sex.unknown=unbekannt
+OMD.CPR.sex.male=männlich
+OMD.CPR.sex.female=weiblich
+
+OMD.CPR.family=Familie
+OMD.CPR.family.father=Vater
+OMD.CPR.family.mother=Mutter
+OMD.CPR.family.other=andere
+OMD.CPR.family.display.father=Vater
+OMD.CPR.family.display.mother=Mutter
+OMD.CPR.family.display.other=
+
+OMD.CPR.biographic.otherprofessorship=weitere Professur
+OMD.CPR.biographic.school=Schule
+OMD.CPR.biographic.studies=Studium
+
+OMD.CPR.adminfunction.rektor=Rektor
+OMD.CPR.adminfunction.dekan=Dekan, Sektionsdirektor
+OMD.CPR.adminfunction.direktor=Direktor (Institut, Fachbereich, Klinik)
+OMD.CPR.adminfunction.prorektor=Prorektor
+OMD.CPR.adminfunction.prodekan=Prodekan, Stellv. Sektionsdirektor
+OMD.CPR.adminfunction.stellvdirektor=Stellv. Direktor (Institut, Fachbereich, Klinik)
+OMD.CPR.adminfunction.other=andere
+
+OMD.CPR.academicdegree.studies=Studium
+OMD.CPR.academicdegree.promotion=Promotion
+OMD.CPR.academicdegree.promotion_bis1800=Promotion (15.-18. Jh.)
+OMD.CPR.academicdegree.habilitation=Habilitation
+OMD.CPR.academicdegree.habilitation_bis1934=Habilitation (vor 1934)
+OMD.CPR.academicdegree.other=anderer
+
+OMD.CPR.academicdegree.display.studies=Studium
+OMD.CPR.academicdegree.display.promotion=Promotion
+OMD.CPR.academicdegree.display.promotion_bis1800=Promotion
+OMD.CPR.academicdegree.display.habilitation=Habilitation
+OMD.CPR.academicdegree.display.habilitation_bis1934=Habilitation
+OMD.CPR.academicdegree.display.other=andere
+
+OMD.CPR.membership.party=Parteimitgliedschaft
+
+OMD.derivatedisplay.display_image=als Bild anzeigen
+OMD.derivatedisplay.display_biography=als Biogr. Artikel anzeigen
+OMD.derivatedisplay.display_none = keine Anzeige
+
+
+OMD.CPR.academictitles.info=aktueller bzw. zuletzt gültiger, vollständiger akademischer Titel
+OMD.CPR.professorships.info=alle Professuren/Dozenturen, Neu- und Umberufungen an der Univ. Rostock, mit Angabe der genauen Zeiträume (Jahre) und Berufungs-/Fachgebiete; bei nicht an der Univ. beschäftigten "externen" (Honorar-, apl.-, Titular-) Professoren Angabe nur des Ernennungsjahres
+OMD.CPR.faculties.info=alle Zugehörigkeiten zu Fakultäten/Sektionen gemäß einer historischen Fakultätensystematik, mit Angabe der genauen Zeiträume der Zugehörigkeit; in Klammern dahinter jeweils der Zeitraum des Bestehens der Fakultät/Sektion unter diesem Namen
+OMD.CPR.institutes.info=Zugehörigkeiten zu Instituten/Kliniken/Bereichen; bei Wechsel des Instituts Angabe des Zeitraums; in Klammern dahinter Veränderungen des Institutsnamens
+OMD.CPR.fieldofstudies.info=frei formulierte Stichworte zu Schwerpunkten der wiss. Tätigkeit 
+OMD.CPR.subjects.info=Zuordnung zu einem oder mehreren Fachgebieten gemäß einer Fachgebietssystematik (in Anlehnung an die Basisklassifikation des GBV)
+OMD.CPR.emails.info
+OMD.CPR.sex.info=Angaben zum Geschlecht
+OMD.CPR.homepages.info=Links zu aktuellen Internetseiten (persönlich, dienstlich, institutionell)
+OMD.CPR.surnames.info=abweichende Nachnamensformen, Pseudonyme, Namensänderungen, Geburtsnamen, Latinisierungen bzw. deutsche Formen
+OMD.CPR.firstnames.info
+OMD.CPR.lifetimes.info=Geburts- und Sterbedatum oder -jahr, Geburts- und Sterbeort/-region
+OMD.CPR.confessions.info
+OMD.CPR.fathers.info=Name, ggf. Lebensjahre und/oder Beruf des Vaters
+OMD.CPR.mothers.info=Name, ggf. Lebensjahre und/oder Beruf der Mutter
+OMD.CPR.families.info=relevante Angaben zu Ehe, Kindern und Verwandschaft, insbesondere Verwandte innerhalb der Rostocker Professoren
+OMD.CPR.biographics.info=möglichst lückenlose Aufführung der hauptsächlichen Lebensstationen: Schule/Abitur, Ausbildung/Studium mit Fächern und Studienorten, berufliche Tätigkeiten/Karriere, sonstige wichtige Informationen
+OMD.CPR.academicdegrees.info=akademische Ausbildung anhand der erworbenen Abschlüsse: Art, Jahr, akad. Grad, ggf. Fachgebiet, Hochschule, ggf. Titel der Qualifikationsarbeit
+OMD.CPR.adminfunctions.info=Ämter und Funktionen an der Univ. Rostock während der Professur: Rektor, Prorektor, Dekan, Prodekan, Sektionsdirektor, Leiter von Instituten, Kliniken, Laboren etc.; Mitglied in Gremien (Senat, Konzil etc.) und Kommissionen, Tätigkeiten in Studien- und Forschungsorganisation
+OMD.CPR.otherfunctions.info=Ämter, Funktionen, Tätigkeiten in Wissenschaft, Politik, Wirtschaft, Gesellschaft, Kultur etc.
+OMD.CPR.memberships.info=Mitgliedschaften in wissenschaftlichen und anderen Gesellschaften, Vereinen, Akademien etc.
+OMD.CPR.awards.info=wichtigere wissenschaftliche und andere Auszeichnungen, Preise; Ehrendoktorate, -professren, -mitgliedschaften
+OMD.CPR.otherinfos.info=sonstige Angaben, die wichtig erscheinen, aber nicht in die Rubriken einzuordnen sind
+OMD.CPR.mainpublications.info=Auswahl von einigen Publikationen: "Hauptwerke", umfangreichere oder neuere Arbeiten oder solche, die repräsentativ für die verschiedenen Forschungsfelder sind
+OMD.CPR.bibliographicrefs.info=Verknüpfung zu Datenbanken, die Publikationen des Professors nachweisen, v.a. Katalog des Verbunds norddeutscher Bibliotheken (GBV), Rostocker Universitätsbibliographie, Landesbibliographie M-V, Katalog der Deutschen Nationalbibliothek (DNB, über die Nummer in der Personennamendatei (PND)), sonstige Fachdatenbanken
+OMD.CPR.sources.info=hauptsächlich für die Erstellung des Eintrags verwendete Quellen: "eigene Angaben" der Professoren bzw. Angehöriger, Personalakten und Literatur
+OMD.CPR.references.info=Autobiographien, ausführlichere und neuere biographische Literatur, Verknüpfungen mit im Internet verfügbaren Digitalisaten, Lexika, biographischen Datenbanken etc. (ADB/NDB, Wikipedia, DBE, DBA(WBIS), Achtung: zum Teil lizenzpflichtig und zurzeit nur aus dem Univ.netz verfügbar)
+OMD.CPR.documents.info=Anzeige von Volltexten oder digitalen Faksimiles von vorhandenen Kurzbiographien direkt in der Detailansicht des Eintrags (Dokumenteinträge)
+OMD.CPR.derobjects.info=Dokumente mit weiterführenden Informationen zur Person, Anzeige/Download als eigene Dateien (meist pdf, jpg): Bild, Lebenslauf, Schriftenverzeichnis, Scans von Dokumenten aus den Personalakten, Digitalisate von biographischer Literatur (Nachrufe, Laudationes, kleinere Artikel)
+OMD.CPR.created_changed.info=Datum und Benutzername der Erstellung und letzten Bearbeitung des Eintrags	
+OMD.CPR.link2page.info=permanenter Link zu dieser Seite; Bitte nur diese Internetadresse für Zitate und Verlinkungen benutzen!!!
+OMD.CPR.onlineres.info=Verknüpfung zu weiteren Internet-Ressourcen über die PND-Nummer.
+OMD.CPR.pubres.info=Verküpfung zu weiteren Publikationsdatenbanken über die PND-Nummer.
+OMD.CPR.quoting.info=Verwenden Sie bitte folgende Form, wenn Sie diese Webseite zitieren.
+OMD.CPR.nameaffixes=Namenszusatz
+OMD.CPR.subjectsM=Fachgebiets- klassifikation (*)
+OMD.CPR.fieldofstudiesM=Lehr- und Forschungsgebiete (*)
+OMD.CPR.professorshipsM=Professuren (*)
+OMD.CPR.awards=Ehrungen
+OMD.CPR.polparties=Parteimitgliedschaften
+OMD.CPR.appraisals=Würdigung
+OMD.CPR.periods=Zeitraum insgesamt
+OMD.CPR.periodsM=Zeitraum insgesamt (*)
+OMD.CPR.quoting=Empfohlene Zitierweise
+OMD.CPR.quoting.text=Eintrag von &quot;{0}&quot; im Catalogus Professorum Rostochiensium,<br /> URL\: <a href\="{1}">{1}</a> <br/>(abgerufen am {2})
+OMD.CPR.quoting.gnd=[GND-Link auf diese Seite: <a href\="{0}">{0}</a>]
+
+OMD.CPR.hint.name=Name
+OMD.CPR.hint.profession=Beruf
+OMD.CPR.hint.nameSurnameM=Nachname (*)
+OMD.CPR.hint.nameFirstnameM=Vorname (*)
+OMD.CPR.hint.nameTitle=akad. Titel
+OMD.CPR.hint.dateShown=Datum(angezeigt)
+OMD.CPR.hint.dateFrom=Datum(nicht vor)
+OMD.CPR.hint.dateTo=Datum(nicht nach)
+OMD.CPR.hint.profType=Prof.Typ
+OMD.CPR.hint.chairID=Lehrstuhl-ID
+OMD.CPR.hint.predec=Vorgänger
+OMD.CPR.hint.succ=Nachfolger
+OMD.CPR.hint.linkurl=Link (URL)
+OMD.CPR.hint.linktitle=Link (Title)
+OMD.CPR.hint.type=Typ
+OMD.CPR.hint.id = Identifier
+OMD.CPR.hint.time=Zeit
+OMD.CPR.hint.time_type=Zeit/Typ
+OMD.CPR.hint.text=Text
+OMD.CPR.hint.place=Ort
+OMD.CPR.hint.place_geoid=Ort/GeoID
+#additional messages
+
+OMD.CPR.states=Status
+OMD.CPR.statesM=Status (*)
+
+OMD.CPR.states.inprogress=in Bearbeitung
+OMD.CPR.states.long=Langeintrag
+OMD.CPR.states.short=Kurzeintrag
+OMD.CPR.states.document=Dokumenteintrag
+OMD.CPR.states.other=Sonstige
+
+OMD.CPR.typeM=Personentyp (*)
+
+OMD.CPR.identifiers=Externe IDs
+OMD.CPR.identifiersM=Externe IDs (*)
+
+OMD.CPR.identifiers.pnd=PND-Nummer
+OMD.CPR.identifiers.nopnd=Eintrag noch nicht mit der Personennamendatei (PND) verknüpft.
+
+#OMD.CPR.show-gbv-links=Link zum GBV
+#OMD.CPR.show-gbv-links.false=nicht anzeigen
+#OMD.CPR.show-gbv-links.true=anzeigen
+
+
+
+OMD.CPR.link.external=Link öffnen
+OMD.CPR.link.internal=RosDok-Dokument öffnen
+
+OMD.CPR.view.gbv=GBV
+OMD.CPR.view.ubr=Unibibliographie
+OMD.CPR.view.dnb=DNB
+OMD.CPR.view.dnb.notfound=Kein Eintrag in der Personennamendatei (PND) vorhanden.
+OMD.CPR.dissertationTitle=Titel der Arbeit
+
+OMD.common.born=geboren
+OMD.common.died=gestorben
+OMD.common.at=am
+OMD.common.in=in
+OMD.common.last=zuletzt
+
+
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
