docdetails and resultdetails
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28573 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
+++ b/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
@@ -223,6 +223,7 @@ OMD.CPR.identifiers.nopnd=Eintrag noch nicht mit der Personennamendatei (PND) ve
 #OMD.CPR.show-gbv-links.false=nicht anzeigen
 #OMD.CPR.show-gbv-links.true=anzeigen
 
+OMD.CPR.created_changed=eingestellt&nbsp;/&nbsp;geändert
 
 
 OMD.CPR.link.external=Link öffnen
@@ -234,13 +235,19 @@ OMD.CPR.view.dnb=DNB
 OMD.CPR.view.dnb.notfound=Kein Eintrag in der Personennamendatei (PND) vorhanden.
 OMD.CPR.dissertationTitle=Titel der Arbeit
 
+
 OMD.common.born=geboren
 OMD.common.died=gestorben
 OMD.common.at=am
 OMD.common.in=in
 OMD.common.last=zuletzt
 
+Webpage.intro.professorum.Subtitle1=Eingabe der CPR Daten
+Webpage.intro.professorum.Text1=Bitte legen Sie zunächst die Metadaten an und laden anschliessend die eventuell zugehörigen Dokumente hoch. Nach diesen Arbeitschritten müssen die daten auf dem Server veröffentlicht werden. Dies geschieht durch einen Mitarbeiter mit den entsprechenden Publikationsrechten. Bei Unvollständigkeit oder Fehlern erhalten Sie Nachricht.    
 
+Webpage.docdetails.tabs.data=Katalogeintrag
+Webpage.docdetails.tabs.article=Biographie
+Webpage.docdetails.tabs.documents=Dokumente/Anhang
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
@@ -285,5 +292,3 @@ WF.professorum.status.wasCommitmentSuccessful=Das Dokument kann veröffentlicht w
 WF.professorum.taskCompleteDocumentAndSendToLibrary=Absenden der vollständigen Daten an die Bibliothek
 
 
-Webpage.intro.professorum.Subtitle1=Eingabe der CPR Daten
-Webpage.intro.professorum.Text1=Bitte legen Sie zunächst die Metadaten an und laden anschliessend die eventuell zugehörigen Dokumente hoch. Nach diesen Arbeitschritten müssen die daten auf dem Server veröffentlicht werden. Dies geschieht durch einen Mitarbeiter mit den entsprechenden Publikationsrechten. Bei Unvollständigkeit oder Fehlern erhalten Sie Nachricht.    
