added some missing text properties
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28577 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
+++ b/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
@@ -46,6 +46,8 @@ Editor.Search.Label.Professor.after=Berufung
 Editor.Search.Label.Professor.before=Ausscheiden
 Editor.Search.label.Timespan=Zeitraum:
 
+Login.ChangeUserID=Catalogus Professorum: Nutzerkennung wechseln
+
 #Docdetails Label
 OMD.CPR.name=Name
 OMD.CPR.nameM=Name (*)
@@ -248,6 +250,18 @@ Webpage.intro.professorum.Text1=Bitte legen Sie zunächst die Metadaten an und la
 Webpage.docdetails.tabs.data=Katalogeintrag
 Webpage.docdetails.tabs.article=Biographie
 Webpage.docdetails.tabs.documents=Dokumente/Anhang
+
+Webpage.searchresults.sort-title_cpr=Name, Vorname
+Webpage.searchresults.sort-rostockdate-from=in Rostock von / seit
+Webpage.searchresults.sort-rostockdate-to=in Rostock bis
+Webpage.searchresults.sort-cpr_histfac_sort=Fakultät
+     
+Webpage.searchresults.sortfield.profsortname=Name, Vorname
+Webpage.searchresults.sortfield.rostockdate_ivon=in Rostock von / seit
+Webpage.searchresults.sortfield.rostockdate_ibis=in Rostock bis
+Webpage.searchresults.sortfield.class_fac_sort=Fakultät
+Webpage.searchresults.sortfield.profstates=Status
+Webpage.searchresults.sortfield.modified=letzte Änderung
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
