--- a/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
+++ b/professorenkatalog-base-webapp/src/main/config/lang/messages_de.properties
@@ -1,10 +1,10 @@
-Nav.Aktuelles
+Nav.Aktuelles=Aktuelles
 Nav.Start=Start
 Nav.Profkat.Index=Personenindex
 Nav.DocumentDetails=Detailansicht
 Nav.Search=Suchen
 Nav.SearchAll=Metadatensuche
-Nav.Search.Profkat.Simple=Einfach Suche
+Nav.Search.Profkat.Simple=Einfache Suche
 Nav.Searchresults=Suchergebnisse
 Nav.Search.Profkat.Extended=Erweiterte Suche
 Nav.DigitalisatDetails=Details über die Digitalisate
@@ -24,7 +24,7 @@ Nav.AdminMenue=Administration
 Nav.Admin.Profkat=Administration Profkat
 WF.professorum=Workflow Professoren
 WF.professorum.begin=Workflow Professoren: Start
-Nav.WorfklowFileUpload=Datei hochladen
+Nav.WorkflowFileUpload=Datei hochladen
 Nav.Admin.Processes=Liste der Workflowprozesse
 Nav.Admin.EditWebcontent=Statische Webseiteninhalte bearbeiten
 
@@ -63,8 +63,10 @@ OMD.CPR.homepages=Homepage
 OMD.CPR.surnames=Namensvarianten
 OMD.CPR.firstnames=weitere Vornamen
 OMD.CPR.lifetimes=Lebensdaten
+OMD.CPR.birthplace=Geburtsort
 OMD.CPR.births=Daten zur Geburt
 OMD.CPR.birthsM=Daten zur Geburt (*)
+OMD.CPR.deathplace=gestorben in
 OMD.CPR.deaths=Daten zum Tode
 OMD.CPR.confessions=Konfession
 OMD.CPR.fathers=Vater
@@ -236,7 +238,9 @@ OMD.CPR.view.ubr=Unibibliographie
 OMD.CPR.view.dnb=DNB
 OMD.CPR.view.dnb.notfound=Kein Eintrag in der Personennamendatei (PND) vorhanden.
 OMD.CPR.dissertationTitle=Titel der Arbeit
-
+OMD.CPR.derivatelabel=Dokumentanhang (Bezeichner)
+OMD.CPR.parentprofession=Beruf der Eltern
+OMD.CPR.references_short=weitere Literatur
 
 OMD.common.born=geboren
 OMD.common.died=gestorben
