--- a/professorenkatalog-base-webapp/src/main/config/lang/messages_en.properties
+++ b/professorenkatalog-base-webapp/src/main/config/lang/messages_en.properties
@@ -1,5 +1,7 @@
 Nav.Aktuelles                   = news
 Nav.Start                       = start
+Nav.Browse.Profkat.Subject      = subjects
+Nav.Start                       = start
 Nav.Profkat.Index               = staff index
 Nav.DocumentDetails             = detailed view
 Nav.Search                      = search
@@ -40,7 +42,7 @@ Editor.Search.Label.Time.after  = after
 Editor.Search.Label.Time.before = before
 Editor.Search.Label.Life.born   = born
 Editor.Search.Label.Life.died   = died
-Editor.Search.Lable.Professor.after=appointment
+Editor.Search.Label.Professor.after=appointment
 Editor.Search.Label.Professor.before= retired
 Editor.Search.label.Timespan    = timespan
 
@@ -61,15 +63,21 @@ OMD.CPR.homepages               = homepage
 OMD.CPR.surnames                = additional names
 OMD.CPR.firstnames              = more first names
 OMD.CPR.lifetimes               = life facts
+OMD.CPR.birthplace              = birth place
 OMD.CPR.births                  = data about birth
 OMD.CPR.birthsM                 = data about birth (*)
+OMD.CPR.deathplace              = death place
 OMD.CPR.deaths                  = data about death
 OMD.CPR.confessions             = confession
+OMD.CPR.parentprofession        = parents profession
 OMD.CPR.father                  = father
 OMD.CPR.mothers                 = mother
 OMD.CPR.families                = family
 OMD.CPR.biographics             = short biography
-OMD.CPR.academicdegress         = academic <br /> degrees
+OMD.CPR.academicdegrees         = academic <br /> degrees
+OMD.CPR.academicdegree.studies  = studies
+OMD.CPR.academicdegree.promotion= conferred to a doctorate
+OMD.CPR.habilitation            = habilitation
 OMD.CPR.adminfunctions          = academic <br /> self-administration
 OMD.CPR.otherfunctions          = responsibilities
 OMD.CPR.memberships             = academic <br /> memberships
@@ -91,6 +99,14 @@ OMD.CPR.sex.unknown             = unknown
 OMD.CPR.sex.male                = male
 OMD.CPR.sex.female              = female
 
+OMD.CPR.references_short        = further literature
+OMD.CPR.derivatelabel           = atached documents (identifier)
+
+OMD.CPR.states.inprogress       = in progress
+OMD.CPR.states.long             = long entry
+OMD.CPR.states.short            = short entry
+OMD.CPR.states.document         = document entry
+OMD.CPR.states.other            = other
 
 Webpage.intro.professorum.Subtitle1 = input of CPR data
 Webpage.intro.professorum.Text1 = Please create first the meta data \
