ongoing development metadata editor
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@30558 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/messages_de.properties
+++ b/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/messages_de.properties
@@ -177,8 +177,8 @@ OMD.CPR.professorshipsM=Professuren (*)
 OMD.CPR.awards=Ehrungen
 OMD.CPR.polparties=Parteimitgliedschaften
 OMD.CPR.appraisals=Würdigung
-OMD.CPR.periods=Zeitraum insgesamt
-OMD.CPR.periodsM=Zeitraum insgesamt (*)
+OMD.CPR.periods=Zeitraum gesamt
+OMD.CPR.periodsM=Zeitraum gesamt (*)
 OMD.CPR.quoting=Empfohlene Zitierweise
 OMD.CPR.quoting.text=Eintrag von &quot;{0}&quot; im Catalogus Professorum Rostochiensium,<br /> URL\: <a href\="{1}">{1}</a> <br/>(abgerufen am {2})
 OMD.CPR.quoting.gnd=[GND-Link auf diese Seite: <a href\="{0}">{0}</a>]
@@ -188,9 +188,9 @@ OMD.CPR.hint.profession=Beruf
 OMD.CPR.hint.nameSurnameM=Nachname (*)
 OMD.CPR.hint.nameFirstnameM=Vorname (*)
 OMD.CPR.hint.nameTitle=akad. Titel
-OMD.CPR.hint.dateShown=Datum(angezeigt)
-OMD.CPR.hint.dateFrom=Datum(nicht vor)
-OMD.CPR.hint.dateTo=Datum(nicht nach)
+OMD.CPR.hint.dateShown=Datum (angezeigt)
+OMD.CPR.hint.dateFrom=Datum (nicht vor)
+OMD.CPR.hint.dateTo=Datum (nicht nach)
 OMD.CPR.hint.profType=Prof.Typ
 OMD.CPR.hint.chairID=Lehrstuhl-ID
 OMD.CPR.hint.predec=Vorgänger
@@ -203,6 +203,7 @@ OMD.CPR.hint.time=Zeit
 OMD.CPR.hint.time_type=Zeit/Typ
 OMD.CPR.hint.text=Text
 OMD.CPR.hint.place=Ort
+OMD.CPR.hint.geoid=GeoID
 OMD.CPR.hint.place_geoid=Ort/GeoID
 #additional messages
 
