indexbrowser ongoing development
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@30715 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/messages_de.properties
+++ b/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/messages_de.properties
@@ -228,7 +228,7 @@ OMD.CPR.identifiers.nopnd=Eintrag noch nicht mit der Personennamendatei (PND) ve
 #OMD.CPR.show-gbv-links.false=nicht anzeigen
 #OMD.CPR.show-gbv-links.true=anzeigen
 
-OMD.CPR.created_changed=eingestellt&nbsp;/&nbsp;geändert
+OMD.CPR.created_changed=eingestell&#160;/&#160;geändert
 
 
 OMD.CPR.link.external=Link öffnen
@@ -271,8 +271,12 @@ Webpage.searchresults.sortfield.modified=letzte Änderung
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
 
-Webpage.indexbrowser.professorum.title=Personen von A - Z
-Webpage.indexbrowser.professorum.intro=Dieser Index enthält die Namen der Personen die im Professorenkatalog aufgeführt sind
+Webpage.indexbrowser.profkat.title=Personen von A - Z
+Webpage.indexbrowser.profkat.intro=Dieser Index enthält die Namen der Personen die im Professorenkatalog aufgeführt sind.
+Webpage.indexbrowser.profkat.label.profkat_period=Prof. in Rostock
+Webpage.indexbrowser.profkat.label.profkat_last_professorship=zuletzt
+Webpage.indexbrowser.profkat.label.profkat_last_faculty_class=zuletzt
+Webpage.indexbrowser.profkat.label.profkat_state_msg=Status
 
 Webpage.editor.title.simple=Einfache Suche über die Daten im Professorenkatalog
 Webpage.editor.title.extended=Erweiterte Suche über die Daten im Professorenkatalog
