--- a/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/messages_en.properties
+++ b/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/messages_en.properties
@@ -130,9 +130,8 @@ Webpage.searchresults.sortfield.modified         = last changed
 Webpage.error.Error             = error
 Webpage.gotoContents            = go to site content
 
-Webpage.indexbrowser.professorum.title           = persons from A to Z
-Webpage.indexbrowser.professorum.intro           = This index contains the \
-                   names of persons listed in the Corporus Professorum
+Webpage.indexbrowser.profkat.title           = Persons from A to Z
+Webpage.indexbrowser.profkat.intro           = This index contains the names of persons listed in this database.
 
 Webpage.editor.title.simple     = simple search in the database of the\
                    Corporus Professorum
