simple search with SOLR
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@30744 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/messages_de.properties
+++ b/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/messages_de.properties
@@ -267,6 +267,7 @@ Webpage.searchresults.sortfield.rostockdate_ibis=in Rostock bis
 Webpage.searchresults.sortfield.class_fac_sort=Fakultät
 Webpage.searchresults.sortfield.profstates=Status
 Webpage.searchresults.sortfield.modified=letzte Änderung
+Webpage.searchresults.sortfield.profkat_idx_profkat=Name, Vorname
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
@@ -277,6 +278,7 @@ Webpage.indexbrowser.profkat.label.profkat_period=Prof. in Rostock
 Webpage.indexbrowser.profkat.label.profkat_last_professorship=zuletzt
 Webpage.indexbrowser.profkat.label.profkat_last_faculty_class=zuletzt
 Webpage.indexbrowser.profkat.label.profkat_state_msg=Status
+
 
 Webpage.editor.title.simple=Einfache Suche über die Daten im Professorenkatalog
 Webpage.editor.title.extended=Erweiterte Suche über die Daten im Professorenkatalog
