--- a/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/messages_en.properties
+++ b/professorenkatalog-base-module/src/main/resources/config/professorenkatalog-base/messages_en.properties
@@ -126,7 +126,7 @@ Webpage.searchresults.sortfield.profsortname     = last name, first name
 Webpage.searchresults.sortfield.class_fac_sort   = faculty
 Webpage.searchresults.profstates                 = status
 Webpage.searchresults.sortfield.modified         = last changed
-
+Webpage.searchresults.sortfield.profkat_idx_profkat=name
 Webpage.error.Error             = error
 Webpage.gotoContents            = go to site content
 
