neues datenfeld epoche
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@30992 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -86,6 +86,7 @@ OMD.CPR.sources=Quellen
 OMD.CPR.references=weitere Literatur
 OMD.CPR.documents=Dokument
 OMD.CPR.derobjects=Anhang
+OMD.CPR.epoch=Epoche
 OMD.CPR.otherprofessorships=Weitere Professuren
 OMD.CPR.link2page=Link auf diese Seite
 OMD.CPR.onlineres=Internet-Ressourcen
