unified jsp tags isLocked and hasAccess
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31051 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -289,8 +289,8 @@ Webpage.browse.title.subject=Über Fachgebiete browsen
 
 Webpage.Search.Possibilities=Es stehen Ihnen folgende Möglichkeiten zur Verfügung:
 
-WF.professorum.feedback=Fehler / Änderungsvorschläge / Kommentare
-
+Webpage.feedback=Fehler / Änderungsvorschläge / Kommentare
+WF.workspace=Arbeitsmappe
 WF.professorum=Arbeitsmappe CPR
 WF.professorum.ActualStateOfYourDocument=Aktueller Bearbeitungsstand bei der Veröffentlichung eines CPR Dokuments. 
 WF.professorum.Created=Das leere Dokument für den Catalogus Professorum ist angelegt. Sie können jetzt die Metadaten bearbeiten, die Dokumente hochladen. 
@@ -307,7 +307,6 @@ WF.professorum.begin=Person anlegen
 WF.professorum.completedocumentandsendtolibrary=Bitte füllen Sie die Metadaten des Dokumentes aus und laden gegebenenfalls Dateien hoch.
 WF.professorum.documentSubmitted2=Durch einen Mitarbeiter der Bibliothek wird diese dann anschliessend veröffentlicht und in das System gestellt.
 WF.professorum.errorUserGuest=Sie haben nicht die notwendigen Berechtigungen für diese Aktion.
-WF.professorum.info=Arbeitsmappe CPR (Information)
 WF.professorum.status.documentCommitted=Ihr CPR Dokument wurde erfolgreich veröffentlicht.
 WF.professorum.status.documentCreated=Das Dokument ist in der Arbeitsmappe angelegt. Nach der Vervollständigung der Metadaten und dem Hochladen Ihres Anhangs können Sie das Dokument absenden.
 WF.professorum.status.documentSubmitted=Die Publikation ist abgegeben worden. Nach der Prüfung durch einen Mitarbeiter der Bibliothek wird sie veröffentlicht. Sie werden per Mail über die Veröffentlichung in Kenntnis gesetzt.
