new message strings
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31109 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -192,7 +192,8 @@ OMD.CPR.hint.nameTitle=akad. Titel
 OMD.CPR.hint.dateShown=Datum (angezeigt)
 OMD.CPR.hint.dateFrom=Datum (nicht vor)
 OMD.CPR.hint.dateTo=Datum (nicht nach)
-OMD.CPR.hint.profType=Prof.Typ
+OMD.CPR.hint.profType=Typ der Professur
+OMD.CPR.hint.profTitle=Titel der Professur
 OMD.CPR.hint.chairID=Lehrstuhl-ID
 OMD.CPR.hint.predec=Vorgänger
 OMD.CPR.hint.succ=Nachfolger
