edit derivates and files in workflow
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31166 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -132,9 +132,11 @@ OMD.CPR.academicdegree.display.other=andere
 
 OMD.CPR.membership.party=Parteimitgliedschaft
 
-OMD.derivatedisplay.display_image=als Bild anzeigen
-OMD.derivatedisplay.display_biography=als Biogr. Artikel anzeigen
-OMD.derivatedisplay.display_none = keine Anzeige
+OMD.derivatelabel.profkat_person=default,display_image,display_biography,display_none
+OMD.derivatelabel.profkat_person.default=
+OMD.derivatelabel.profkat_person.display_image=als Bild anzeigen
+OMD.derivatelabel.profkat_person.display_biography=als Biogr. Artikel anzeigen
+OMD.derivatelabel.profkat_person.display_none = keine Anzeige
 
 
 OMD.CPR.academictitles.info=aktueller bzw. zuletzt gültiger, vollständiger akademischer Titel
