PROKA-4 #comment updated editor and docdetails view
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31814 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -225,8 +225,8 @@ OMD.CPR.typeM=Personentyp (*)
 OMD.CPR.identifiers=Externe IDs
 OMD.CPR.identifiersM=Externe IDs (*)
 
-OMD.CPR.identifiers.pnd=PND-Nummer
-OMD.CPR.identifiers.nopnd=Eintrag noch nicht mit der Personennamendatei (PND) verknüpft.
+OMD.CPR.identifiers.gnd=GND-Nummer
+OMD.CPR.identifiers.nognd=Eintrag noch nicht mit der Gemeinsamen Normdatei (GND) verknüpft.
 
 #OMD.CPR.show-gbv-links=Link zum GBV
 #OMD.CPR.show-gbv-links.false=nicht anzeigen
