PROKA-4 #comment quoting text in message.properties
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31818 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -183,8 +183,9 @@ OMD.CPR.appraisals=Würdigung
 OMD.CPR.periods=Zeitraum gesamt
 OMD.CPR.periodsM=Zeitraum gesamt (*)
 OMD.CPR.quoting=Empfohlene Zitierweise
-OMD.CPR.quoting.text=Eintrag von &quot;{0}&quot; im Catalogus Professorum Rostochiensium,<br /> URL\: <a href\="{1}">{1}</a> <br/>(abgerufen am {2})
-OMD.CPR.quoting.gnd=[GND-Link auf diese Seite: <a href\="{0}">{0}</a>]
+
+OMD.PROFKAT.quoting.text=Eintrag von &quot;{0}&quot; im Professorenkatalog,<br /> URL\: <a href\="{1}">{1}</a> <br/>(abgerufen am {2})
+OMD.PROFKAT.quoting.gnd=[GND-Link auf diese Seite: <a href\="{0}">{0}</a>]
 
 OMD.CPR.hint.name=Name
 OMD.CPR.hint.profession=Beruf
