--- a/profkat-sample-webapp/src/main/config/lang/messages_de.properties
+++ b/profkat-sample-webapp/src/main/config/lang/messages_de.properties
@@ -3,3 +3,5 @@
 #
 
 Webpage.title=Professorenkatalog - Beispielanwendung
+
+OMD.PROFKAT.quoting.text=Eintrag von &quot;{0}&quot; im Professorenkatalog,<br /> URL\: <a href\="{1}">{1}</a> <br/>(abgerufen am {2})
