start defining searchmasks
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32266 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -28,6 +28,7 @@ Nav.WorkflowFileUpload=Datei hochladen
 Nav.Admin.Processes=Liste der Workflowprozesse
 Nav.Admin.EditWebcontent=Statische Webseiteninhalte bearbeiten
 
+Editor.Search.Label.AllMeta=in allen Datenfeldern
 Editor.Search.Label.ProfNames=Name
 Editor.Search.Label.Historigin=Fakultät/Sektion
 Editor.Search.Label.SubjectProf=Fachklassifikation
