start implementation of simple search
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@32441 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -31,6 +31,8 @@ Nav.Admin.EditWebcontent=Statische Webseiteninhalte bearbeiten
 Editor.Search.Label.AllMeta=in allen Datenfeldern
 Editor.Search.Label.ProfNames=Name
 Editor.Search.Label.Historigin=Fakultät/Sektion
+Editor.Search.Label.Institution=Einrichtung
+
 Editor.Search.Label.SubjectProf=Fachklassifikation
 Editor.Search.Label.ProfTypes=Art der Professur
 Editor.Search.Label.ProfStates=Status des Eintrages
@@ -43,8 +45,8 @@ Editor.Search.Label.Time.after=nach
 Editor.Search.Label.Time.before=vor
 Editor.Search.Label.Life.born=geboren
 Editor.Search.Label.Life.died=gestorben
-Editor.Search.Label.Professor.after=Berufung
-Editor.Search.Label.Professor.before=Ausscheiden
+Editor.Search.Label.Professor.after=Berufung nach
+Editor.Search.Label.Professor.before=Ausscheiden vor
 Editor.Search.label.Timespan=Zeitraum:
 
 Login.ChangeUserID=Catalogus Professorum: Nutzerkennung wechseln
@@ -273,7 +275,7 @@ Webpage.searchresults.sortfield.rostockdate_ibis=in Rostock bis
 Webpage.searchresults.sortfield.class_fac_sort=Fakultät
 Webpage.searchresults.sortfield.profstates=Status
 Webpage.searchresults.sortfield.modified=letzte Änderung
-Webpage.searchresults.sortfield.profkat_idx_profkat=Name, Vorname
+Webpage.searchresults.sortfield.profkat_idx_headline=Name, Vorname
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
